[package]
name = "pedro_add_one"
version = "0.1.0"
edition = "2021"
description = "Lib for add one to input value"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3